Added Splunk porject screenshots and updated description

--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
         <div class="project">
             <h3>Splunk SIEM Log Analysis</h3>
             <p>Used Splunk to analyze security logs, detect anomalies, and create real-time dashboards for threat monitoring.</p>
+            <ul>
+                <li>Built custom dashboards to visualize security threats and network activity.</li>
+                <li>Created SPL queries to detect brute force attacks, unauthorized access attempts, and malware activity.</li>
+                <li>Configured real-time alerts to notify security teams of unusual activity.</li>
+                <li>Correlated multiple log sources to identify advanced persistent threats (APT).</li>
+                <li>Investigated security incidents using Splunk's log data to determine root causes.</li>
+            </ul>
+            <h4>📷 Project Screenshots:</h4>
+        <img src="images/Splunk-Alert-Configuration.png" alt="Splunk Alerts & Queries" class="project-img">
+        <img src="images/SplunkDetection.png" alt="Splunk Security Dashboard" class="project-img">
+        <img src="images/EventID4625.png" alt="Splunk Alerts & Queries" class="project-img">
         </div>
     </section>
     
