Updated website with resume download link

--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:antonio.s.fernandez@outlook.com">antonio.s.fernandez@outlook.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/antoniosfernandez/" target="_blank">https://www.linkedin.com/in/antoniosfernandez/</a></p>
+        <p>Resume: <a href="AntonioFernandezResumeHD1.pdf" download>AntonioFernandezResumeHD1</a></p>
     </section>
     
     <footer>
-        <p>&copy; 2025 Antonio | Cybersecurity Enthusiast</p>
+        <p>&copy; 2025 Antonio | Aspiring Cybersecurity & IT Professional</p>
     </footer>
     <script>
         document.querySelectorAll('nav a').forEach(anchor => {
