--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:antonio.s.fernandez@outlook.com">antonio.s.fernandez@outlook.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/antoniosfernandez/" target="_blank">https://www.linkedin.com/in/antoniosfernandez/</a></p>
-        <p>Resume: <a href="AntonioFernandezResumeHD1.pdf" download>AntonioFernandezResumeHD1</a></p>
+        <p>Resume: <a href="https://github.com/afernandez123/cybersecurity-portfolio/releases/download/v1.0/AntonioFernandezResumeHD1.pdf" download>Antonio's Resume</a></p>
     </section>
     
     <footer>
