--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <div class="animated-bg"></div>
     <header>
-        <h1>Antonio Cybersecurity Portfolio</h1>
+        <div class="profile-container">
+            <img src="images/profilepicture.jpg" alt="Profile Picture" class="profile-pic">
+            <h1 class="site-title">Antonio's Cybersecurity E-Portfolio</h1>
+        </div>
+</div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
