--- a/index.html
+++ b/index.html
@@ -139,6 +139,33 @@
         <img src="images/SplunkDetection.png" alt="Splunk Security Dashboard" class="project-img">
         <img src="images/EventID4625.png" alt="Splunk Alerts & Queries" class="project-img">
         </div>
+
+        <!-- Suspicious Login Tracker Project -->
+<div class="project">
+    <h3>Suspicious Login Tracker (Linux Bash Script) 🔒</h3>
+    <p>Developed a lightweight Bash script to monitor Linux system logs for repeated failed SSH login attempts, helping detect brute force attacks automatically.</p>
+    <ul>
+        <li>Parsed /var/log/secure to extract failed login attempts using grep and awk.</li>
+        <li>Triggered alerts for suspicious IPs exceeding login failure thresholds.</li>
+        <li>Documented findings and created sample incident reports.</li>
+    </ul>
+    <h4>🔗 Project Link:</h4>
+    <a href="https://github.com/afernandez123/suspicious-login-tracker" target="_blank">View on GitHub</a>
+</div>
+
+<!-- ServiceNow Helpdesk Project -->
+<div class="project">
+    <h3>ServiceNow Helpdesk Ticket Management 🚑</h3>
+    <p>Simulated a real-world IT Helpdesk environment by creating, categorizing, prioritizing, and managing incidents within ServiceNow’s enterprise platform.</p>
+    <ul>
+        <li>Created sample incident tickets based on realistic user scenarios (e.g., network connectivity issues).</li>
+        <li>Prioritized, categorized, and assigned tickets to the appropriate support groups.</li>
+        <li>Documented incident management processes following ITIL best practices.</li>
+    </ul>
+    <h4>🔗 Project Link:</h4>
+    <a href="https://github.com/afernandez123/ServiceNow-Helpdesk-Projects" target="_blank">View on GitHub</a>
+</div>
+
     </section>
     
     <section id="contact">
