--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
                 <li>Correlated multiple log sources to identify advanced persistent threats (APT).</li>
                 <li>Investigated security incidents using Splunk's log data to determine root causes.</li>
             </ul>
-            <h4>📷 Project Screenshots:</h4>
+            <h4>📷 Project Link & Screenshots:</h4>
         <img src="images/Splunk-Alert-Configuration.png" alt="Splunk Alerts & Queries" class="project-img">
         <img src="images/SplunkDetection.png" alt="Splunk Security Dashboard" class="project-img">
         <img src="images/EventID4625.png" alt="Splunk Alerts & Queries" class="project-img">
+        <a href="https://github.com/afernandez123/brute-force-detection-splunk" target="_blank">View on Github</a>
         </div>
 
         <!-- Suspicious Login Tracker Project -->
