--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
         <li>Triggered alerts for suspicious IPs exceeding login failure thresholds.</li>
         <li>Documented findings and created sample incident reports.</li>
     </ul>
+    <h4>📷 Project Screenshots:</h4>
+<img src="images/tracker-output.png" alt="Suspicious Login Tracker Output" class="project-img">
+
     <h4>🔗 Project Link:</h4>
     <a href="https://github.com/afernandez123/suspicious-login-tracker" target="_blank">View on GitHub</a>
 </div>
@@ -164,6 +167,10 @@
         <li>Prioritized, categorized, and assigned tickets to the appropriate support groups.</li>
         <li>Documented incident management processes following ITIL best practices.</li>
     </ul>
+    <h4>📷 Project Screenshots:</h4>
+<img src="images/servicenow-incident-creation.png" alt="ServiceNow Incident Creation" class="project-img">
+<img src="images/servicenow-incident-list.png" alt="ServiceNow Incident List" class="project-img">
+
     <h4>🔗 Project Link:</h4>
     <a href="https://github.com/afernandez123/ServiceNow-Helpdesk-Projects" target="_blank">View on GitHub</a>
 </div>
