--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
     </ul>
     <h4>📷 Project Screenshots:</h4>
 
-    <a href="images/ServiceNow_First_Incident_Part1.png" target="_blank"
+    <a href="images/ServiceNow_First_Incident_Part1.png" target="_blank">
 <img src="images/ServiceNow_First_Incident_Part1.png" alt="ServiceNow Incident Creation" class="project-img">
     </a>
-    <a href="images/ServiceNow_First_Incident_Part2.png" target="_blank"
+    <a href="images/ServiceNow_First_Incident_Part2.png" target="_blank">
 <img src="images/ServiceNow_First_Incident_Part2.png" alt="ServiceNow Incident List" class="project-img">
     </a>
 
