--- a/index.html
+++ b/index.html
@@ -135,9 +135,15 @@
                 <li>Investigated security incidents using Splunk's log data to determine root causes.</li>
             </ul>
             <h4>📷 Project Link & Screenshots:</h4>
+            <a href="images/Splunk-Alert-Configuration.png" target="_blank">
         <img src="images/Splunk-Alert-Configuration.png" alt="Splunk Alerts & Queries" class="project-img">
+            </a>
+            <a href="images/SplunkDetection.png" target="_blank">
         <img src="images/SplunkDetection.png" alt="Splunk Security Dashboard" class="project-img">
+            </a>
+            <a href="images/EventID4625.png" target="_blank">
         <img src="images/EventID4625.png" alt="Splunk Alerts & Queries" class="project-img">
+            </a>
             
         <a href="https://github.com/afernandez123/brute-force-detection-splunk" target="_blank">View on Github</a>
         </div>
@@ -152,7 +158,9 @@
         <li>Documented findings and created sample incident reports.</li>
     </ul>
     <h4>📷 Project Screenshots:</h4>
-<img src="images/tracker-output.png" alt="Suspicious Login Tracker Output" class="project-img">
+    <a href="images/BruteForceAttempt.png" target="_blank">
+<img src="images/BruteForceAttempt.png" alt="Suspicious Login Tracker Output" class="project-img">
+    </a>
 
     <h4>🔗 Project Link:</h4>
     <a href="https://github.com/afernandez123/suspicious-login-tracker" target="_blank">View on GitHub</a>
