--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         <li>Documented findings and created sample incident reports.</li>
     </ul>
     <h4>📷 Project Screenshots:</h4>
+    <p><em>Terminal output showing detected brute force attack alert</em></p>
+    
     <a href="images/BruteForceAttempt.png" target="_blank">
 <img src="images/BruteForceAttempt.png" alt="Suspicious Login Tracker Output" class="project-img">
     </a>
