--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p>I’m Antonio Fernandez, an Army veteran with a strong foundation in IT, cybersecurity, and emerging technologies. I hold Security+, Network+, Linux+, Splunk Core Certified Power User, and RPA UiPath ADA certifications, showcasing my expertise in network security, system administration, automation, and data analysis.
+        <p>I’m Antonio Fernandez, an Army veteran with a strong foundation in IT, cybersecurity, and emerging technologies. I hold Security+, Network+, Linux+, Splunk Core Certified Power User, AWS Cloud Certified Practitioner and RPA UiPath ADA certification, showcasing my expertise in network security, system administration, automation, and data analysis.
 
             Through hands-on projects, I’ve developed skills in threat detection, security monitoring, and IT automation, applying industry best practices to real-world scenarios. With a problem-solving mindset and a drive for continuous learning, I’m committed to growing in the cybersecurity field and leveraging my knowledge to enhance security operations.
             </p>
