--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
         <img src="images/EventID4625.png" alt="Splunk Alerts & Queries" class="project-img">
             </a>
             
+            <br> <!-- break line -->
+            
         <a href="https://github.com/afernandez123/brute-force-detection-splunk" target="_blank">View on Github</a>
         </div>
 
