--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
             
             <br> <!-- break line -->
             
+            <h4>🔗 Project Link:</h4>
         <a href="https://github.com/afernandez123/brute-force-detection-splunk" target="_blank">View on Github</a>
         </div>
 
