--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <li>Correlated multiple log sources to identify advanced persistent threats (APT).</li>
                 <li>Investigated security incidents using Splunk's log data to determine root causes.</li>
             </ul>
-            <h4>📷 Project Link & Screenshots:</h4>
+            <h4>📷 Project Screenshots:</h4>
             <a href="images/Splunk-Alert-Configuration.png" target="_blank">
         <img src="images/Splunk-Alert-Configuration.png" alt="Splunk Alerts & Queries" class="project-img">
             </a>
