--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <h3>ServiceNow Helpdesk Ticket Management 🚑</h3>
     <p>Simulated a real-world IT Helpdesk environment by creating, categorizing, prioritizing, and managing incidents within ServiceNow’s enterprise platform.</p>
     <ul>
-        <li>Created sample incident tickets based on realistic user scenarios (e.g., network connectivity issues).</li>
+        <li>Created sample incident tickets based on realistic user scenarios (network connectivity issues).</li>
         <li>Prioritized, categorized, and assigned tickets to the appropriate support groups.</li>
         <li>Documented incident management processes following ITIL best practices.</li>
     </ul>
