--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         
 <div class="project">
     <h3>Active Directory User Management Simulation (Linux)</h3>
-    <p>Simulated key Active Directory tasks — user creation, password resets, disabling accounts, and group assignments — using Linux terminal commands to mirror real Helpdesk operations.</p>
+    <p>Simulated key Active Directory tasks, user creation, password resets, disabling accounts, and group assignments. Using Linux terminal commands to mirror real Helpdesk operations.</p>
     <h4>📷 Project Link:</h4>
     <a href="https://github.com/afernandez123/active-directory-simulation" target="_blank">View on GitHub</a>
 </div>
