--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p>I’m Antonio Fernandez, an Army veteran with a strong foundation in IT, cybersecurity, and emerging technologies. I hold Security+, Network+, Linux+, Splunk Core Certified Power User, AWS Cloud Certified Practitioner and RPA UiPath ADA certification, showcasing my expertise in network security, system administration, automation, and data analysis.
-
-            Through hands-on projects, I’ve developed skills in threat detection, security monitoring, and IT automation, applying industry best practices to real-world scenarios. With a problem-solving mindset and a drive for continuous learning, I’m committed to growing in the cybersecurity field and leveraging my knowledge to enhance security operations.
-            </p>
+        <p>I’m Antonio Fernandez, an Army veteran with a strong foundation in IT, cybersecurity, and technical support operations. I hold Security+, Network+, Linux+, AWS Certified Cloud Practitioner, Splunk Core Certified Power User, and RPA UiPath ADA certifications, demonstrating skills in system administration, network security, data analysis, and automation.
+Through hands-on projects, I have built practical experience in user account management, ticketing systems, threat detection, and IT automation, applying best practices in real-world scenarios. I am passionate about solving problems, supporting users, and strengthening security operations, and I am committed to continuous learning and growth within the IT and cybersecurity fields.
+ </p>
     </section>
     
     <section id="certifications">
