--- a/index.html
+++ b/index.html
@@ -201,6 +201,28 @@ Through hands-on projects, I have built practical experience in user account man
     <a href="https://github.com/afernandez123/active-directory-simulation" target="_blank">View on GitHub</a>
 </div>
 
+<!-- SQL Log Analysis Project -->
+<div class="project">
+    <h3>SQL Log Analysis: SOC Simulation 🧠</h3>
+    <p>Simulated a real-world SOC analyst environment by detecting brute-force login attempts and off-hours activity using SQL queries on PostgreSQL logs.</p>
+    <ul>
+        <li>Built a user activity log system with realistic login/logout patterns</li>
+        <li>Wrote SQL queries to detect failed logins, suspicious IPs, and off-hours access</li>
+        <li>Simulated brute force and credential stuffing attacks for investigation</li>
+        <li>Used DBeaver and PostgreSQL for structured log analysis</li>
+    </ul>
+    <h4>📷 Project Screenshots:</h4>
+    <a href="images/sql-failed-logins.png" target="_blank">
+        <img src="images/sql-failed-logins.png" alt="Failed Logins Query" class="project-img">
+    </a>
+    <a href="images/sql-ip-analysis.png" target="_blank">
+        <img src="images/sql-ip-analysis.png" alt="IP Threat Analysis" class="project-img">
+    </a>
+
+    <h4>🔗 Project Link:</h4>
+    <a href="https://github.com/afernandez123/sql-log-analysis-soc" target="_blank">View on GitHub</a>
+</div>
+
     </section>
     
     <section id="contact">
