--- a/index.html
+++ b/index.html
@@ -223,6 +223,31 @@ Through hands-on projects, I have built practical experience in user account man
     <a href="https://github.com/afernandez123/sql-log-analysis-soc" target="_blank">View on GitHub</a>
 </div>
 
+    <!-- SQL Failed Login Tracker -->
+
+<div class="project">
+  <h3>SQL Failed Login Tracker</h3>
+  <p>Used SQLite to simulate SOC-style log triage by identifying brute force login attempts. Queried CSV-based authentication logs to detect IPs with repeated failures using GROUP BY and HAVING logic.</p>
+  <ul>
+    <li>Created and analyzed a mock login activity dataset</li>
+    <li>Detected suspicious IPs with ≥3 failed login attempts</li>
+    <li>Wrote SQL queries to simulate real SOC detection logic</li>
+    <li>Documented findings in an analyst-style summary report</li>
+  </ul>
+  <h4>📷 Project Screenshots:</h4>
+  <a href="images/user-activity-logCSV.png" target="_blank">
+    <img src="images/user-activity-logCSV.png" alt="CSV Input Log File" class="project-img">
+  </a>
+  <a href="images/sql-failed-logins.png" target="_blank">
+    <img src="images/sql-failed-logins.png" alt="SQL Failed Login Detection Output" class="project-img">
+  </a>
+  <h4>🔗 Links:</h4>
+  <ul>
+    <li><a href="https://github.com/afernandez123/sql-failed-login-tracker" target="_blank">View on GitHub</a></li>
+    <li><a href="https://github.com/afernandez123/sql-failed-login-tracker/blob/main/summary.md" target="_blank">Read the Analyst Report</a></li>
+  </ul>
+</div>
+        
     </section>
     
     <section id="contact">
